k8s/Microservices1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-1
  template:
    metadata:
      labels:
        app: microservice-1
    spec:
      containers:
        - name: microservice-1
          image: elalejmartin/microservices1:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
