k8s/Microservices1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-1
spec:
  selector:
    app: microservice-1
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
  type: ClusterIP
