k8s/Microservices1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-1-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # 👈 Agrega esta línea
  rules:
    - host: micro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice-1
                port:
                  number: 81
